# valiq

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: valiq.yaml
tests/: test_ati_gate.py  test_completeness.py  test_scorer.py  test_valuation.py
valiq/: __init__.py  cli.py  config.py  config.py.bak  models.py  models.py.bak  pii.py  scorer.py  submit.py
valiq/blocks/: __init__.py  b1_financial.py  b2_data.py  b3_product.py  b4_tech.py  b5_clients.py  b6_compliance.py  b7_market.py  b8_team.py  b9_ip.py
valiq/connectors/: __init__.py  amocrm.py  ati.py  base.py  github.py  stripe.py
valiq/llm/: __init__.py  judge.py
valiq/report/: __init__.py  html.py  valuation.py  valuation.py.bak
