[project]
name = "valiq"
version = "0.1.0"
description = "ValIQ (ITAI Score) — IT/AI product market value & maturity scorer"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
valiq = "valiq.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
